--- a/SpareTimeMusicApp/Base.lproj/Main.storyboard
+++ b/SpareTimeMusicApp/Base.lproj/Main.storyboard
@@ -41,10 +41,10 @@
                         <rect key="frame" x="0.0" y="64" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="ORN-t9-DFr">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="ORN-t9-DFr">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="74" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="adV-7c-7EC" customClass="NTTableView" customModule="SpareTimeAlarmApp" customModuleProvider="target">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="74" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="adV-7c-7EC" customClass="NTTableView" customModule="SpareTimeAlarmApp" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <view key="tableHeaderView" contentMode="scaleToFill" id="U9H-0c-LTU">
@@ -102,6 +102,10 @@
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7Vv-Lw-gUJ" userLabel="NTSwitch" customClass="NTSwitch" customModule="SpareTimeAlarmApp" customModuleProvider="target">
                                                     <rect key="frame" x="317" y="23" width="50" height="30"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="50" id="HDU-Yi-Goa"/>
+                                                        <constraint firstAttribute="height" constant="30" id="Jul-9G-tAa"/>
+                                                    </constraints>
                                                     <connections>
                                                         <action selector="repeatRingtoneSwitchValueChanged:" destination="UEf-Ks-Y9b" eventType="valueChanged" id="b4o-EL-1yC"/>
                                                     </connections>
@@ -112,7 +116,9 @@
                                                 <constraint firstItem="0if-fe-eCk" firstAttribute="leading" secondItem="19m-uS-Kzv" secondAttribute="leading" constant="14" id="6At-wn-EXE"/>
                                                 <constraint firstAttribute="bottom" secondItem="nRx-w5-2Rw" secondAttribute="bottom" constant="9" id="ACx-1x-18y"/>
                                                 <constraint firstItem="0if-fe-eCk" firstAttribute="top" secondItem="19m-uS-Kzv" secondAttribute="top" constant="16" id="KUr-QJ-YHI"/>
+                                                <constraint firstAttribute="centerY" secondItem="7Vv-Lw-gUJ" secondAttribute="centerY" id="LlT-R5-CHa"/>
                                                 <constraint firstItem="nRx-w5-2Rw" firstAttribute="leading" secondItem="19m-uS-Kzv" secondAttribute="leading" constant="13.5" id="RLj-Hh-hg3"/>
+                                                <constraint firstAttribute="trailing" secondItem="7Vv-Lw-gUJ" secondAttribute="trailing" constant="8" id="qjg-pb-2Ft"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -130,6 +136,16 @@
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="adV-7c-7EC" secondAttribute="trailing" id="3Eb-3V-GR9"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="ORN-t9-DFr" secondAttribute="bottom" id="4Zu-Va-eUq"/>
+                            <constraint firstAttribute="trailing" secondItem="ORN-t9-DFr" secondAttribute="trailing" id="5ry-aG-sT4"/>
+                            <constraint firstItem="adV-7c-7EC" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" id="MAd-V6-ZgL"/>
+                            <constraint firstItem="ORN-t9-DFr" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" id="Wns-7N-lAP"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="adV-7c-7EC" secondAttribute="bottom" id="Z7P-Aa-wa7"/>
+                            <constraint firstItem="ORN-t9-DFr" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="gFw-sw-Ze8"/>
+                            <constraint firstItem="adV-7c-7EC" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="x2X-tr-7XW"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="cpG-QL-oHH">
                         <barButtonItem key="leftBarButtonItem" image="setting" id="qm4-Uu-tvA">
@@ -326,6 +342,7 @@
                                                     </userDefinedRuntimeAttributes>
                                                     <variation key="default">
                                                         <mask key="constraints">
+                                                            <exclude reference="4Mn-bP-G0T"/>
                                                             <exclude reference="mjz-JK-rjv"/>
                                                         </mask>
                                                     </variation>
@@ -339,6 +356,7 @@
                                                 <constraint firstAttribute="trailing" secondItem="IQr-7w-cPO" secondAttribute="trailing" constant="36" id="daQ-Pu-pda"/>
                                                 <constraint firstAttribute="bottom" secondItem="IQr-7w-cPO" secondAttribute="bottom" constant="8" id="jbZ-vb-BzO"/>
                                                 <constraint firstAttribute="bottom" secondItem="BHS-bh-TdP" secondAttribute="bottom" constant="27" id="p0n-Xu-45E"/>
+                                                <constraint firstItem="IQr-7w-cPO" firstAttribute="leading" secondItem="BHS-bh-TdP" secondAttribute="trailing" constant="45.5" id="tXF-wi-DyY"/>
                                                 <constraint firstItem="BHS-bh-TdP" firstAttribute="top" secondItem="cIP-3Q-c9r" secondAttribute="top" constant="28" id="vvY-D0-zUI"/>
                                             </constraints>
                                             <variation key="default">
@@ -593,11 +611,11 @@
                         <rect key="frame" x="0.0" y="64" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="jB4-Pk-4Mg">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="jB4-Pk-4Mg">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="WM9-sc-oJ4" customClass="NTTableView" customModule="SpareTimeAlarmApp" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="44" width="390" height="623"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="WM9-sc-oJ4" customClass="NTTableView" customModule="SpareTimeAlarmApp" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="44" width="375" height="623"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="repeatDateCell" rowHeight="50" id="ljb-Z9-aaR" customClass="RepeatDateSelectionTableViewCell" customModule="SpareTimeAlarmApp" customModuleProvider="target">
@@ -612,10 +630,18 @@
                                                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView hidden="YES" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" image="done small" translatesAutoresizingMaskIntoConstraints="NO" id="3wm-li-sb5">
-                                                    <rect key="frame" x="347" y="17" width="17" height="15"/>
+                                                <imageView hidden="YES" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="done small" translatesAutoresizingMaskIntoConstraints="NO" id="3wm-li-sb5">
+                                                    <rect key="frame" x="332" y="17" width="17" height="15"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="17" id="4pN-O7-kg5"/>
+                                                        <constraint firstAttribute="height" constant="15" id="CTd-LT-hHx"/>
+                                                    </constraints>
                                                 </imageView>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="centerY" secondItem="3wm-li-sb5" secondAttribute="centerY" id="TIY-to-2MR"/>
+                                                <constraint firstAttribute="trailing" secondItem="3wm-li-sb5" secondAttribute="trailing" constant="26" id="j5L-SM-bQs"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <connections>
@@ -631,6 +657,16 @@
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="jB4-Pk-4Mg" firstAttribute="leading" secondItem="RoM-c1-dVH" secondAttribute="leading" id="0jk-bU-VA7"/>
+                            <constraint firstItem="jB4-Pk-4Mg" firstAttribute="top" secondItem="RoM-c1-dVH" secondAttribute="top" id="4GW-5D-P01"/>
+                            <constraint firstAttribute="trailing" secondItem="WM9-sc-oJ4" secondAttribute="trailing" id="4dv-bI-Ws5"/>
+                            <constraint firstAttribute="trailing" secondItem="jB4-Pk-4Mg" secondAttribute="trailing" id="PEc-9h-Rue"/>
+                            <constraint firstAttribute="bottom" secondItem="WM9-sc-oJ4" secondAttribute="bottom" id="Vf2-qJ-Xxd"/>
+                            <constraint firstAttribute="bottom" secondItem="jB4-Pk-4Mg" secondAttribute="bottom" id="b4Y-XE-37O"/>
+                            <constraint firstItem="WM9-sc-oJ4" firstAttribute="top" secondItem="RoM-c1-dVH" secondAttribute="top" constant="44" id="bWO-wk-WJc"/>
+                            <constraint firstItem="WM9-sc-oJ4" firstAttribute="leading" secondItem="RoM-c1-dVH" secondAttribute="leading" id="t91-Ce-6nb"/>
+                        </constraints>
                     </view>
                     <toolbarItems/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
